--- a/services.html
+++ b/services.html
@@ -67,7 +67,7 @@
 					<li><a class="active" href="services.html">Our Services</a></li>
 					<li><a href="barbers.html">Our Barbers</a></li>
 					<li><a href="appointment.html">Appointment</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="contact.html">Contactasdf</a></li>
 				</ul>
 			</div>
         </div>
